--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 							<header>
 								<h2 class="alt">Nilo Sérgio</h2>
 								<p>Bem-vindo ao meu website/portfolio. Abaixo você poderá explorar meus projetos e repositórios, todos hospedados no <a href="https://github.com/nilossa">GitHub</a>.
-								<br> Você também pode me encontrar no <a href="https://www.linkedin.com/in/nilo-s%C3%A9rgio-souza-de-almeida-92239423a/">Linkedin.</a></p>
+								<br> Você também pode me encontrar no <a href="https://www.linkedin.com/in/nilo-s%C3%A9rgio-souza-de-almeida-92239423a/">LinkedIn.</a></p>
 							</header>
 
 							<footer>
